[package]
name = "breadx"
version = "0.1.0"
authors = ["notgull <jtnunley01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1"
nix = { version = "0.23", optional = true }
socket2 = { version = "0.4", optional = true }
x11rb-protocol = { git = "https://github.com/psychon/x11rb" }

[features]
default = ["std"]
std = ["nix"]
async = ["std", "socket2"]