[package]
name = "breadx"
version = "0.1.0"
authors = ["notgull <jtnunley01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.7.6", default-features = false, features = ["compile-time-rng"] }
cfg-if = "1"
concurrent-queue = { version = "1.2.2", optional = true }
futures-util = { version = "0.3.21", default-features = false, optional = true }
gethostname = { version = "0.2.3", optional = true }
hashbrown = { version = "0.12.0", default-features = false }
nix = { version = "0.24.1", optional = true }
parking_lot = { version = "0.12.0", optional = true }
socket2 = { version = "0.4", optional = true }
tracing = { version = "0.1.34", default-features = false }
x11rb-protocol = { git = "https://github.com/psychon/x11rb" }

[features]
default = ["std"]
std = ["ahash/std", "gethostname", "nix"]
async = ["futures-util", "std", "socket2"]

sync_display = ["concurrent-queue", "std"]
pl = ["sync_display", "parking_lot"]

[dev-dependencies]
spin_on = "0.1.1"
tracing-subscriber = "0.3.11"
