#               Copyright John Nunley, 2022.
# Distributed under the Boost Software License, Version 1.0.
#       (See accompanying file LICENSE or copy at
#         https://www.boost.org/LICENSE_1_0.txt)

[package]
name = "breadx-generator"
version = "0.1.0"
edition = "2018"
license = "BSL-1.0"

[dependencies]
anyhow = "1.0.57"
heck = "0.4.0"
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
xcb_parser = { path = "../xcb_parser" }