[package]
name = "breadx"
version = "0.5.0"
authors = ["notgull <jtnunley01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.7.6", default-features = false, features = ["compile-time-rng"] }
cfg-if = "1"
concurrent-queue = { version = "1.2.2", optional = true }
futures-util = { version = "0.3.21", default-features = false, optional = true }
gethostname = { version = "0.2.3", optional = true }
hashbrown = { version = "0.12.0", default-features = false }
nix = { version = "0.24.1", optional = true }
parking_lot = { version = "0.12.0", optional = true }
socket2 = { version = "0.4", optional = true }
tracing = { version = "0.1.34", default-features = false }
x11rb-protocol = { git = "https://github.com/psychon/x11rb" }

[dev-dependencies]
spin_on = "0.1.1"
tracing-subscriber = "0.3.11"

[features]
default = ["std"]
std = ["ahash/std", "gethostname", "nix"]
async = ["futures-util", "std", "socket2"]

sync_display = ["concurrent-queue", "std"]
pl = ["sync_display", "parking_lot"]

composite = ["xfixes", "x11rb-protocol/composite"]
damage = ["xfixes", "x11rb-protocol/damage"]
dpms = ["x11rb-protocol/dpms"]
dri2 = ["x11rb-protocol/dri2"]
dri3 = ["std", "x11rb-protocol/dri3"]
glx = ["x11rb-protocol/glx"]
present = ["randr", "xfixes", "sync", "x11rb-protocol/present"]
randr = ["render", "std", "x11rb-protocol/randr"]
record = ["x11rb-protocol/record"]
render = ["x11rb-protocol/render"]
res = ["x11rb-protocol/res"]
screensaver = ["x11rb-protocol/screensaver"]
shape = ["x11rb-protocol/shape"]
shm = ["std", "x11rb-protocol/shm"]
sync = ["x11rb-protocol/sync"]
xevie = ["x11rb-protocol/xevie"]
xf86dri = ["x11rb-protocol/xf86dri"]
xf86vidmode = ["x11rb-protocol/xf86vidmode"]
xfixes = ["render", "shape", "x11rb-protocol/xfixes"]
xinerama = ["x11rb-protocol/xinerama"]
xinput = ["xfixes", "x11rb-protocol/xfixes"]
xkb = ["x11rb-protocol/xkb"]
xprint = ["x11rb-protocol/xprint"]
xselinux = ["x11rb-protocol/xselinux"]
xtest = ["x11rb-protocol/xtest"]
xv = ["shm", "x11rb-protocol/xv"]
xvmc = ["xv", "x11rb-protocol/xvmc"]
