[package]
name = "breadx"
version = "0.5.0"
authors = ["notgull <jtnunley01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.7.6", default-features = false, features = ["compile-time-rng"] }
async-io = { version = "1", optional = true }
blocking = { version = "1", optional = true }
bytemuck = { version = "1.9.1" }
cfg-if = "1"
concurrent-queue = { version = "1.2.2", optional = true }
futures-util = { version = "0.3.21", default-features = false, features = ["alloc"], optional = true }
gethostname = { version = "0.2.3", optional = true }
hashbrown = { version = "0.12.0", default-features = false }
nix = { version = "0.24.1", optional = true }
parking_lot = { version = "0.12.0", optional = true }
pin-project-lite = { version = "0.2.9", optional = true }
socket2 = { version = "0.4", optional = true }
tokio = { version = "1.18.2", features = ["net", "rt"], optional = true }
tracing = { version = "0.1.34", default-features = false }
tracing-futures = { version = "0.2.5", default-features = false, optional = true, features = ["std-future"] }
x11rb-protocol = { git = "https://github.com/psychon/x11rb" }

[dev-dependencies]
async-std = { version = "1.11.0", features = ["attributes"] }
spin_on = "0.1.1"
tokio = { version = "1.18.2", features = ["macros", "io-std", "io-util", "rt-multi-thread", "tracing"] }
tracing-subscriber = "0.3.11"

[features]
default = ["std"]
std = ["ahash/std", "gethostname", "nix"]
async = ["futures-util", "std", "socket2"]
async-std-support = ["async", "async-io", "blocking"]
tokio-support = ["async", "tokio"]

sync_display = ["concurrent-queue", "std"]
pl = ["sync_display", "parking_lot"]

composite = ["xfixes", "x11rb-protocol/composite"]
damage = ["xfixes", "x11rb-protocol/damage"]
dpms = ["x11rb-protocol/dpms"]
dri2 = ["x11rb-protocol/dri2"]
dri3 = ["std", "x11rb-protocol/dri3"]
glx = ["x11rb-protocol/glx"]
present = ["randr", "xfixes", "sync", "x11rb-protocol/present"]
randr = ["render", "std", "x11rb-protocol/randr"]
record = ["x11rb-protocol/record"]
render = ["x11rb-protocol/render"]
res = ["x11rb-protocol/res"]
screensaver = ["x11rb-protocol/screensaver"]
shape = ["x11rb-protocol/shape"]
shm = ["std", "x11rb-protocol/shm"]
sync = ["x11rb-protocol/sync"]
xevie = ["x11rb-protocol/xevie"]
xf86dri = ["x11rb-protocol/xf86dri"]
xf86vidmode = ["x11rb-protocol/xf86vidmode"]
xfixes = ["render", "shape", "x11rb-protocol/xfixes"]
xinerama = ["x11rb-protocol/xinerama"]
xinput = ["xfixes", "x11rb-protocol/xinput"]
xkb = ["x11rb-protocol/xkb"]
xprint = ["x11rb-protocol/xprint"]
xselinux = ["x11rb-protocol/xselinux"]
xtest = ["x11rb-protocol/xtest"]
xv = ["shm", "x11rb-protocol/xv"]
xvmc = ["xv", "x11rb-protocol/xvmc"]
