[package]
name = "breadx_generator"
version = "0.2.1"
authors = ["not_a_seagull <notaseagull048@gmail.com>"]
edition = "2018"

[dependencies]
ahash = "0.5.8"
getrandom = "0.2.0"
heck = "0.3.1"
log = "0.4.0"
memchr = "2.3.4"
proc-macro2 = "1.0.24"
quick-xml = "0.20.0"
quote = "1.0.7"
regex = "1.4.2"
simple_logger = "1.11.0"
syn = { version = "1.0.48", features = ["full"] }
tinyvec = { version = "1.1.0-alpha", features = ["alloc"] }
