#               Copyright John Nunley, 2022.
# Distributed under the Boost Software License, Version 1.0.
#       (See accompanying file LICENSE or copy at
#         https://www.boost.org/LICENSE_1_0.txt)

[package]
name = "xcb_parser"
version = "0.1.0"
edition = "2018"
license = "BSL-1.0"
authors = ["notgull <jtnunley01@gmail.com>"]
description = "A simple parser for XCB-XML files"
keywords = ["xcb","parser"]

[dependencies]
anyhow = { version = "1.0.53", features = ["backtrace"] }
quick-xml = "0.22.0"
tracing = "0.1.29"
